# wcf-http

./: .gitignore  README.md  installer.cfg  pyproject.toml  requirements.txt
src/wcf_http/: core.py  main.py  preamble.py
tests/: test_core_http.py
